--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -8,8 +8,8 @@
       public string Name { get; set; } = string.Empty;
       public string Department { get; set; } = string.Empty;
       public string JobTitle { get; set; } = string.Empty;
-      public string Shift { get; set; } = string.Empty;
-      public string EmployeeID { get; set; } = string.Empty;
+      public int Shift { get; set; }
+      public int EmployeeID { get; set; }
    }
 }
 
