--- a/WCSTrainer/Pages/Accounts/Index.cshtml
+++ b/WCSTrainer/Pages/Accounts/Index.cshtml
@@ -9,6 +9,12 @@
       <partial name="_Sidebar" />
       <div class="properties">
          <div class="flex-column">
+            <div class="user-form">
+               <div class="btn-container">
+                  <a id="register" asp-area="Identity" asp-page="/Account/Register" class="btn bg-btn btnWhite">Register New Account</a>
+               </div>
+            </div>
+            <br />
             <div class="order-list2">
                <table id="dataTable">
                   <tr>
