--- a/WCSTrainer/Pages/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Employees/Edit.cshtml
@@ -13,8 +13,7 @@
                <form method="post">
                   <div asp-validation-summary="All" class="text-danger"></div>
                   <input asp-for="Employee.Id" hidden />
-                  <input asp-for="Employee.UserAccountId" class="form-control" type="hidden" />
-                  <input asp-for="Employee.Skills" class="form-control" type="hidden" />
+                  <input asp-for="Employee.UserAccountId" type="hidden" />
 
                   <div class="form-group">
                      <div class="form">
@@ -24,14 +23,37 @@
                         </div>
                         <input asp-for="Employee.FirstName" class="form-control" />
                      </div>
-                  </div>
-                  <div class="form-group">
                      <div class="form">
                         <div class="labels">
                            <label asp-for="Employee.LastName" class="control-label"></label>
                            <span asp-validation-for="Employee.LastName" class="text-danger"></span>
                         </div>
                         <input asp-for="Employee.LastName" class="form-control" />
+                     </div>
+                  </div>
+                  <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <p class="control-label">Job Title</p>
+                           <span asp-validation-for="Employee.JobTitle" class="text-danger"></span>
+                        </div>
+                        <input asp-for="Employee.JobTitle" class="form-control" />
+                     </div>
+                  </div>
+                  <div class="form-group">
+                     <div class="form">
+                        <div class="labels">
+                           <p class="control-label">Employee ID</p>
+                           <span asp-validation-for="Employee.EmployeeID" class="text-danger"></span>
+                        </div>
+                        <input asp-for="Employee.EmployeeID" class="form-control" />
+                     </div>
+                     <div class="form">
+                        <div class="labels">
+                           <p class="control-label">Shift</p>
+                           <span asp-validation-for="Employee.Shift" class="text-danger"></span>
+                        </div>
+                        <input asp-for="Employee.Shift" class="form-control" />
                      </div>
                   </div>
                   <div class="form-group">
