--- a/WCSTrainer/Pages/Index.cshtml
+++ b/WCSTrainer/Pages/Index.cshtml
@@ -36,21 +36,21 @@
          <div class="menu-grid">
             <a href="/TrainingOrders" class="menu-btn">
                <div class="img-container">
-                  <img src="~/images/TrainingOrders.svg" alt="Training Orders Image"/>
+                  <img src="~/images/Panel.svg" alt="Training Orders Image"/>
                </div>
-               <div class="text-container">Training Orders</div>
+               <div class="text-container">My Panel</div>
             </a>
-            <a href="/Lessons" class="menu-btn">
+            <a href="/Help" class="menu-btn">
                <div class="img-container">
-                  <img src="~/images/Lessons.svg" alt="Lessons Image"/>
+                  <img src="~/images/Help.svg" alt="Lessons Image"/>
                </div>
-               <div class="text-container">Lessons</div>
+               <div class="text-container">Help</div>
             </a>
             <a href="/Identity/Account/Manage" class="menu-btn">
                <div class="img-container">
                   <img src="~/images/settings.svg" alt="Settings Image" />
                </div>
-               <div class="text-container">Account Settings</div>
+               <div class="text-container">Settings</div>
             </a>
          </div>
       </div>
