--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -122,8 +122,7 @@
                      </div>
                   }
 
-                  @if (OrderStatus != "Approving")
-                  {
+                  @if (OrderStatus != "Approving") {
                      <div class="form-group">
                         <div class="form">
                            <div class="labels">
