--- a/WCSTrainer/Pages/Skills/Details.cshtml
+++ b/WCSTrainer/Pages/Skills/Details.cshtml
@@ -20,6 +20,10 @@
                         </div>
                         <table>
                            <tr>
+                              <td class="label">Skill ID</td>
+                              <td class="text">@Model.Skill.Id</td>
+                           </tr>
+                           <tr>
                               <td class="label">Name</td>
                               <td class="text">@Model.Skill.Name</td>
                            </tr>
