--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -41,7 +41,7 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="multi-select-wrapper">
-                           <p class="label">Lesson</p>
+                           <p class="labels">Included Lessons</p>
                            @{
                               var lessonCount = 0;
                               @foreach (var category in Model.LessonCategories) {
