--- a/WCSTrainer/Pages/Skills/Edit.cshtml
+++ b/WCSTrainer/Pages/Skills/Edit.cshtml
@@ -38,6 +38,31 @@
                   </div>
                   <div class="form-group">
                      <div class="form">
+                        <div class="selections multi-select-wrapper">
+                           @{
+                              var lessonCount = 0;
+                              @foreach (var category in Model.LessonCategories) {
+                                 @foreach (var lesson in category.Lessons) {
+                                    lessonCount = lessonCount + 1;
+                                 }
+                              }
+                              <select asp-for="SelectedLessonList" multiple class="multi-select-comp" size="@lessonCount">
+                                 @foreach (var category in Model.LessonCategories) {
+                                    @foreach (var lesson in category.Lessons) {
+                                       if (Model.Skill.Lessons.Contains(lesson)) {
+                                          <option value="@lesson.Id" selected>@category.Name - @lesson.Name</option>
+                                       } else {
+                                          <option value="@lesson.Id">@category.Name - @lesson.Name</option>
+                                       }
+                                    }
+                                 }
+                              </select>
+                           }
+                        </div>
+                     </div>
+                  </div>
+                  <div class="form-group">
+                     <div class="form">
                         <div class="labels">
                            <label asp-for="Skill.Description" class="control-label"></label>
                            <span asp-validation-for="Skill.Description" class="text-danger"></span>
@@ -54,6 +79,8 @@
       </div>
    </div>
 </div>
+
+<script src="~/js/pillMenu.js"></script>
 
 
 @section Scripts {
