--- a/WCSTrainer/Pages/Skills/Edit.cshtml
+++ b/WCSTrainer/Pages/Skills/Edit.cshtml
@@ -38,26 +38,12 @@
                   </div>
                   <div class="form-group">
                      <div class="form">
-                        <div class="selections multi-select-wrapper">
-                           @{
-                              var lessonCount = 0;
-                              @foreach (var category in Model.LessonCategories) {
-                                 @foreach (var lesson in category.Lessons) {
-                                    lessonCount = lessonCount + 1;
-                                 }
+                        <div id="Select Lessons" class="multi-select-wrapper">
+                           <select asp-for="SelectedLessonList" multiple class="multi-select-comp" size="@Model.Lessons.Count()">
+                              @foreach (var lesson in Model.Lessons) {
+                                 <option value="@lesson.Key.Id" selected="@(Model.Skill.Lessons.Contains(lesson.Key) ? "true" : null)">@lesson.Value - @lesson.Key.Name</option>
                               }
-                              <select asp-for="SelectedLessonList" multiple class="multi-select-comp" size="@lessonCount">
-                                 @foreach (var category in Model.LessonCategories) {
-                                    @foreach (var lesson in category.Lessons) {
-                                       if (Model.Skill.Lessons.Contains(lesson)) {
-                                          <option value="@lesson.Id" selected>@category.Name - @lesson.Name</option>
-                                       } else {
-                                          <option value="@lesson.Id">@category.Name - @lesson.Name</option>
-                                       }
-                                    }
-                                 }
-                              </select>
-                           }
+                           </select>
                         </div>
                      </div>
                   </div>
