--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -20,16 +20,14 @@
                         <option value="-1">All</option>
                      </select>
                   </div>
-                  <div class="multi-select-wrapper">
-                     <p class="label">Priorities</p>
+                  <div id="Priorities" class="multi-select-wrapper">
                      <select multiple class="multi-select-comp" size="3">
                         <option value="1">High</option>
                         <option value="2">Medium</option>
                         <option value="3">Low</option>
                      </select>
                   </div>
-                  <div class="multi-select-wrapper">
-                     <p class="label">Months</p>
+                  <div id="Months" class="multi-select-wrapper">
                      <select multiple class="multi-select-comp" size="12">
                         <option value="1">January</option>
                         <option value="2">February</option>
@@ -45,8 +43,7 @@
                         <option value="12">December</option>
                      </select>
                   </div>
-                  <div class="multi-select-wrapper">
-                     <p class="label">Years</p>
+                  <div id="Years" class="multi-select-wrapper">
                      @{
                         var activeYears = new List<int>();
                         for (int year = Model.EarliestYear; year <= DateTime.Now.Year; year++) {
