--- a/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Person.razor
@@ -23,7 +23,7 @@
                   </tr>
                   <tr>
                      <td class="label">Shift</td>
-                     <td class="text">@employee.Shift</td>
+                     <td class="text">@(employee.Shift == 1 ? "1st Shift" : "2nd Shift")</td>
                   </tr>
                   <tr>
                      <td class="label">Known Skills</td>
