--- a/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
@@ -121,34 +121,28 @@
                                  <div class="pills-container">
                                     @{
                                        var list = new List<Employee>();
-                                       foreach (var trainer in TrainingOrder.Trainers)
-                                       {
+                                       foreach (var trainer in TrainingOrder.Trainers) {
                                           list.Add(trainer);
                                        }
-                                       foreach (var groupPerson in groupPeople)
-                                       {
-                                          if (!list.Contains(groupPerson))
-                                          {
+                                       foreach (var groupPerson in groupPeople) {
+                                          if (!list.Contains(groupPerson)) {
                                              list.Add(groupPerson);
                                           }
                                        }
-                                       foreach (var item in list)
-                                       {
+                                       foreach (var item in list) {
                                           <a href="/Employees/Details?id=@item.Id" class="pill">@item.FirstName @item.LastName</a>
                                        }
                                     }
                                  </div>
                               </td>
                            </tr>
-                           @if (TrainingOrder.TrainerGroups.Count > 0)
-                           {
+                           @if (TrainingOrder.TrainerGroups.Count > 0) {
                               <tr>
                                  <td class="label">Trainer Groups</td>
                                  <td class="text">
                                     <div class="pills-container">
                                        @{
-                                          foreach (var group in TrainingOrder.TrainerGroups)
-                                          {
+                                          foreach (var group in TrainingOrder.TrainerGroups) {
                                              <a href="/TrainerGroups/Details?id=@group.Id" class="pill">@group.Name</a>
                                           }
                                        }
@@ -159,8 +153,7 @@
                            <tr>
                               <td class="label">Location</td>
                               <td class="text">
-                                 @if (TrainingOrder.Location != null)
-                                 {
+                                 @if (TrainingOrder.Location != null) {
                                     <a href="/Locations/Details?id=@TrainingOrder.LocationId" class="link">
                                        @TrainingOrder.Location.Name
                                     </a>
@@ -171,8 +164,7 @@
                      </table>
                   </div>
                }
-               @if (!TrainingOrder.Status.Equals("Approving") && !TrainingOrder.Status.Equals("Scheduling"))
-               {
+               @if (!TrainingOrder.Status.Equals("Approving") && !TrainingOrder.Status.Equals("Scheduling")) {
                   <div class="field-section">
                      <div class="title-row">
                         <p class="title">Scheduled - @TrainingOrder.ScheduleDate</p>
