--- a/WCSTrainer/Pages/Shared/_Groups.cshtml
+++ b/WCSTrainer/Pages/Shared/_Groups.cshtml
@@ -27,8 +27,13 @@
          };
 
          var groupJson = JsonSerializer.Serialize(newGroup, jsonOptions);
-         var count = item.Trainers.Count();
-         <li onclick="setSelectedGroup('@groupJson', '@count', this)" class="item" data-name="@item.Name">
+         var memberList = new List<string>();
+         foreach (var member in item.Trainers) {
+            memberList.Add(member.FirstName + " " + member.LastName);
+         }
+         var count = memberList.Count();
+         var memberString = string.Join(", ", memberList);
+         <li onclick="setSelectedGroup('@groupJson', '@memberString', this)" class="item" data-name="@item.Name">
             <div class="info">
                <p>@item.Name</p>
                <div class="sub">
@@ -49,20 +54,15 @@
       <div id="group-info-container" class="info-container">
          <p id="groupName" class="title"></p>
          <div class="info">
-            <p class="one">Group ID</p>
-            <p id="groupId" class="two"></p>
-         </div>
-         <div class="info">
-            <p class="one">Member Count</p>
-            <p id="groupMemberCount" class="two"></p>
+            <p class="one">Members: </p>
+            <p id="groupMembers" class="two"></p>
          </div>
          <div class="btn-container">
-            <a class="btn btnWhite bg-btn" onclick="linkToGroup()">View Details</a>
+            <a class="btn btnWhite bg-btn" onclick="linkToGroup()">View Group Details</a>
          </div>
       </div>
    </div>
    <div class="bottom">
-      <p>Selected:</p>
       <div class="list-container">
          <ul id="groupTempList" class="list"></ul>
       </div>
@@ -79,21 +79,20 @@
       window.open('/TrainerGroups/Details?id=' + selectedGroup.Id, '_blank');
    }
    
-   function setSelectedGroup(groupJson, count, element) {
+   function setSelectedGroup(groupJson, members, element) {
       var groupInfoContainer = document.getElementById('group-info-container');
       if (groupInfoContainer.style.display != "flex") {
          groupInfoContainer.style.display = "flex";
       }
       selectedGroup = JSON.parse(groupJson);
       updateSelectedGroup();
-      document.getElementById('groupMemberCount').textContent = count;
+      document.getElementById('groupMembers').textContent = members;
 
       highlight(element, 'groupsList');
    }
 
    function updateSelectedGroup() {
       document.getElementById('groupName').textContent = selectedGroup.Name;
-      document.getElementById('groupId').textContent = selectedGroup.Id;
    }
 
    function searchGroups() {
