--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -8,7 +8,7 @@
       public string Name { get; set; } = string.Empty;
       public string Department { get; set; } = string.Empty;
       public string JobTitle { get; set; } = string.Empty;
-      public int Shift { get; set; }
+      public string Shift { get; set; }
       public int EmployeeID { get; set; }
    }
 }
@@ -33,7 +33,7 @@
                Id = item.Id,
                EmployeeID = item.EmployeeID,
                JobTitle = item.JobTitle,
-               Shift = item.Shift,
+               Shift = item.Shift == 1 ? "1st Shift" : "2nd Shift",
                Name = item.FirstName + " " + item.LastName,
                Department = departments
          };
